@@ -30,6 +30,7 @@ from mint import projects
 from mint import searcher
 from mint import shimclient
 from mint import users
+from mint import usertemplates
 from mint import userlevels
 from mint.client import timeDelta
 from mint.helperfuncs import getProjectText
@@ -367,6 +368,30 @@ class SiteHandler(WebHandler):
 
     @requiresAuth
     @redirectHttps
+    def cloudSettings(self, auth):
+        return self._write("cloudSettings",
+                           user = self.user,
+                           dataDict = self.user.getDataDict(self.user.getDataTemplateAWS()),
+                           defaultedData = self.user.getDefaultedDataAWS())
+    
+    @requiresHttps
+    @requiresAuth
+    def processCloudSettings(self, auth, **kwargs):
+        
+        for key, (dType, default, prompt, errordesc, helpText, password) in \
+                self.user.getDataTemplateAWS().iteritems():
+            if dType == data.RDT_BOOL:
+                val = bool(kwargs.get(key, False))
+            elif dType == data.RDT_INT:
+                val = int(kwargs.get(key, default))
+            else:
+                val = str(kwargs.get(key, default))
+            self.user.setDataValue(key, val)
+            
+        self._redirect("http://%s%s" % (self.cfg.siteHost, self.cfg.basePath))
+
+    @requiresAuth
+    @redirectHttps
     def userSettings(self, auth):
         return self._write("userSettings",
                            user = self.user,
@@ -393,7 +418,7 @@ class SiteHandler(WebHandler):
         if fullName != auth.fullName:
             self.user.setFullName(fullName)
 
-        for key, (dType, default, prompt, errordesc) in \
+        for key, (dType, default, prompt, errordesc, helpText, password) in \
                 self.user.getDataTemplate().iteritems():
             if dType == data.RDT_BOOL:
                 val = bool(kwargs.get(key, False))
@@ -415,7 +440,7 @@ class SiteHandler(WebHandler):
                 self._redirectHttp("logout")
 
         self._redirectHttp('/')
-
+        
     @requiresAuth
     @listFields(str, projects=[])
     @strFields(keydata = '')
